
  - Manage User Credentials in Controller. This change
    incorporates the equivalent of ORCJAVA-295 fix for
    correctly releasing restlet client resources.
    (Juha Lindfors)

ORCJAVA-295
===========

  - Restlet ClientResource was released too soon (before resource
    content was consumed), causing a NPE. Fixed by moving release
    call in finally block after processing. (Eric Bariaux)

ORCJAVA-401
===========

  - Timezones in dates in datetime protocol do not work
    (Juha Lindfors)


Controller Pro 1.0.11
=====================

New Features:

  - Direct HTTP related logging into its own file in /logs/http/http.log
    (Juha Lindfors) (ORCJAVA-368)
  - Have Samsung protocol as separate jar for Pro release (ORCJAVA-381)
  - Add a polling interval on the DateTime protocol (ORCJAVA-396)
  - Marantz AVR protocol improvements: multiple-zone support and additional commands (ORCJAVA-395)
  - Create unit tests for Marantz protocol implementation (ORCJAVA-408)

Bug Fixes:

  - Reliability updates to Russound integration (Torbjorn Osterdahl) (ORCJAVA-376)
  - Guard against null pointer exception in RRD logger lifecycle
    (Juha Lindfors) (ORCJAVA-356)
  - Fix lagarto configuration to read its settings from controller.xml
    in addition to the config.properties file (Juha Lindfors) (ORCJAVA-264)
  - X10: patch for potential race condition between thread deallocating 
    gateway and thread processing serial port input (Juha Lindfors, ORCJAVA-359)
  - Fix ISY-99 connection error messages at regular interval (ORCJAVA-372)
  - Vera protocol implementation exception at startup (ORCJAVA-403)
  - Update Marantz implementation to use locale independent string case conversions (ORCJAVA-340)

Controller Pro 1.0.10
=====================

New Features:

  - Add Port Abstraction Daemon (PAD) source files to project (ORCJAVA-314 + ORCJAVA-375)
  - EnOcean Implementation (Rainer Hitz) (ORCJAVA-348)
  - Rewrite TCP for EventListener interface (Marcus Redeker) (ORCJAVA-298)
